--- a/wakeUpServer_v2/Dockerfile
+++ b/wakeUpServer_v2/Dockerfile
@@ -2,4 +2,5 @@ FROM ubuntu
 RUN apt update
 RUN apt -y install curl
 COPY ./scs .
-#ENTRYPOINT ["sh", "exec.sh"]
+RUN touch log
+ENTRYPOINT ["sh", "exec.sh"]
